# Sentiment_analyser_app

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
app/: __main__.py  app.py
app/src/: utils.py
app/src/data/: make_dataset.py
app/src/features/: build_features.py
app/src/models/: predict_model.py  train_model.py  vocabulary.py
app/static/JS/: form.js
app/static/javascript/: form.js
app/static/styles/: form.css  results.css
app/templates/: form.html  results.html
app/test/: test_flask.py  test_main.py  test_mlpart.py
docs/: app.rst  app.src.features.rst  app.src.models.rst  app.src.rst  app.src.visualization.rst  app.test.rst  conf.py  index.rst  intro.rst
docs/_build/doctrees/: app.doctree  app.src.data.doctree  app.src.doctree  app.src.features.doctree  app.src.models.doctree  app.src.visualization.doctree  app.test.doctree  environment.pickle  index.doctree  intro.doctree  modules.doctree
docs/_build/html/: .buildinfo  app.html  app.src.data.html  app.src.features.html  app.src.html  app.src.models.html  app.src.visualization.html  app.test.html  genindex.html  index.html  intro.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: app.src.data.rst.txt  intro.rst.txt  modules.rst.txt
docs/source/: conf.py
models/linearsvc/: linearsvc.pickle  scores.json
models/logistic/: logistic.pickle  scores.json
models/multinomialNB/: scores.json
models/vader/: scores.json
models/vader_global/: scores.json
